<resources>
    <!-- Global -->
    <string name="app_name">Hongry</string>
    <string name="newAdventureButton">New Adventure</string>
    <string name="favoritesButton">Tried-and-True</string>
    <string-array name="cuisine_list">
        <item>Pizza</item>
        <item>Mexican</item>
        <item>Thai</item>
        <item>Indian</item>
    </string-array>
    <string name="keywordLabel">Keyword(s)</string>
    <string name="cuisineLabel">Cuisine</string>
    <string name="radiusSelectLabel">Search Radius</string>

    <!-- End Global -->

    <!-- Main -->
    <string name="appStartLabel">Are you hungry? What\'s your mood, dude?</string>
    <string name="restaurantStartLabel">Looking for a new adventure or tried-and-true?</string>
    <string name="eatInButton">Eat in!</string>
    <string name="eatOutButton">Eat out!</string>

    <string name="action_settings">Settings</string>
    <!-- End Main -->

    <!-- Start Restaurant -->
    <string name="title_activity_restaurant_start">Restaurant</string>
    <string name="eatOutStartTitle">New Restaurant Adventure</string>

    <!-- Start Recipe -->
    <string name="eatInStartTitle">New Recipe Adventure</string>


    <!-- Search Restaurant -->
    <string name="title_activity_search_resturants">Search Resturants</string>
    <string name="radiusPickerLabel">Search Radius</string>
    <string name="searchRestaurantsButton">Find My Eats</string>
    <string name="GPSAlertDialogTitle">GPS Alert</string>
    <string name="GPSAlertDialogMessage">You must enable location services to use this feature.</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_list_restaurants">ListRestaurants</string>
    <string name="addressLabel">Address</string>

    <string name="hello_world">Hello world!</string>
    <!-- End Search Restaurant -->

    <!-- Recipe Details -->
    <string name="RecipeDetailsIngredientsButton">Ingredients</string>
    <string name="RecipeDetailsNutInfoButton">Nutrition</string>
    <string name="RecipeDetailsDetailsButton">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- End Recipe Details -->

    <!--Restaurant Map -->
    <string name="restMapTitle">Restaurant Location</string>

    <!-- Font Awesome -->
    <string name="fa_heart_icon">&#xf004; Add to Favorites</string>
    <string name="already_in_favorites">&#xf004; You LOVE this!</string>
    <string name="title_activity_recipe_favorites">RecipeFavorites</string>

    <string name="delete">delete</string>
    <string name="deleteRestaurantFaveConfirmTitle">Restaurant Delete</string>
    <string name="deleteRestaurantFaveConfirm">Are you sure you want to remove this restaurant from your favorites?</string>
    <string name="deleteRecipeFaveConfirmTitle">Recipe Delete</string>
    <string name="deleteRecipeFaveConfirm">Are you sure you want to remove this recipe from your favorites?</string>
    <string name="confirmYes">yes</string>
    <string name="confirmNo">no</string>
    <string name="title_activity_restaurant_details_container">RestaurantDetailsContainer</string>
    <string name="title_activity_restaurant_details">RestaurantDetails</string>
    <string name="title_activity_restaurant_favorites">RestaurantFavorites</string>

    <!-- nav menu -->
    <string name="recFaveNav">Fave Recipes</string>
    <string name="restFaveNav">Fave Restaurants</string>
    <string name="recNewNav">New Recipe</string>
    <string name="restNewNav">New Restaurant</string>
    <string name="homeTitle">Hungry Home</string>
    <string name="restListTitle">Restaurant Search Results</string>
    <string name="restDetailsTitle">Restaurant Details</string>
    <string name="recListTitle">Recipe Search Results</string>
    <string name="recDetailsTitle">Recipe Details</string>
    <string name="drawer_open">Hamburger Menu Open</string>
    <string name="drawer_closed">Hamburger Menu Closed</string>
    <string name="menuHeaderText">It\'s about the destination, not the journey</string>
    <string name="title_activity_maps">Map</string>


</resources>
