<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_fave_recipe"
                android:icon="@mipmap/pizza"
                android:title="@string/recFaveNav" />
            <item
                android:id="@+id/nav_fave_restuarant"
                android:icon="@mipmap/pizza"
                android:title="@string/restFaveNav" />
            <item
                android:id="@+id/nav_new_recipe"
                android:icon="@mipmap/pizza"
                android:title="@string/recNewNav" />
            <item
                android:id="@+id/nav_new_restuarant"
                android:icon="@mipmap/pizza"
                android:title="@string/restNewNav" />
        </group>
</menu>