<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:foregroundGravity="bottom|top"
    android:onClick="eatIn">

    <TextView android:text="@string/appStartLabel" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="40dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eatInButton"
        android:id="@+id/eatIn"
        android:textSize="30dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FF33CC"
        android:onClick="eatInStart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eatOutButton"
        android:id="@+id/eatOut"
        android:textSize="30dp"
        android:layout_alignTop="@+id/eatIn"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        android:textColor="#330099"
        android:onClick="eatOutStart" />

    <TextSwitcher
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSwitcher"
        android:layout_below="@+id/eatOut"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="74dp"
        android:layout_marginStart="74dp" />

</RelativeLayout>
