<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.juniperbushes_99.hongry.SearchRecipes">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cuisineSpinner"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginTop="126dp"
        android:layout_toRightOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cuisineLabel"
        android:id="@+id/cuisineLabel"
        android:layout_alignTop="@+id/cuisineSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/keywordLabel"
        android:id="@+id/textView4"
        android:layout_marginTop="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recipeKeyword"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/cuisineSpinner"
        android:layout_alignEnd="@+id/cuisineSpinner"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/cuisineSpinner"
        android:layout_alignStart="@+id/cuisineSpinner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchRestaurantsButton"
        android:id="@+id/button3"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:onClick="searchRecipesGo" />

</RelativeLayout>
