<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.juniperbushes_99.hongry.SearchResturants"
    android:id="@+id/searchRestaurants">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/radiusSelectLabel"
        android:id="@+id/radiusPickerLabel"
        android:paddingTop="20dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/restaurantSearchKeywordInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/restaurantSearchKeywordInput"
        android:text=""
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/radiusPicker"
        android:layout_alignStart="@+id/radiusPicker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/keywordLabel"
        android:id="@+id/restaurantSearchKeywordLabel"
        android:layout_alignTop="@+id/restaurantSearchKeywordInput"
        android:layout_alignRight="@+id/searchRestaurantsButton"
        android:layout_alignEnd="@+id/searchRestaurantsButton" />


    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/radiusPicker"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:layout_marginRight="72dp"
        android:layout_marginEnd="72dp"
        android:layout_alignTop="@+id/radiusPickerLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/addressLabel"
        android:id="@+id/addressLabel"
        android:paddingTop="20dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radiusPickerLabel" />

    <EditText
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:paddingTop="40dp"
        android:layout_alignTop="@+id/addressLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchRestaurantsButton"
        android:id="@+id/searchRestaurantsButton"
        android:onClick="searchRestaurantsGo"
        android:layout_below="@+id/radiusPicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="127dp" />
</RelativeLayout>
