<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:foregroundGravity="bottom|top">

    <TextView android:text="@string/appStartLabel" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:paddingLeft="12sp"
        android:paddingRight="12sp"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_above="@+id/eatOut"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:paddingTop="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eatInButton"
        android:id="@+id/eatIn"
        android:textSize="30sp"
        android:textColor="#E6E0F8"
        android:layout_alignBottom="@+id/textSwitcher"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#4C0B5F"
        android:padding="14sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eatOutButton"
        android:id="@+id/eatOut"
        android:textSize="30sp"
        android:textColor="#330099"
        android:background="#f8e0f7"
        android:padding="14dp"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextSwitcher
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSwitcher"
        android:layout_below="@+id/eatOut"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="74dp"
        android:layout_marginStart="74dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/pizza_ninja"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/eatIn"
        android:layout_alignRight="@+id/eatIn"
        android:layout_alignEnd="@+id/eatIn" />

</RelativeLayout>
