<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.juniperbushes_99.hongry.SearchResturants"
    android:id="@+id/searchRestaurants">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/radiusSelectLabel"
        android:id="@+id/radiusPickerLabel"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Cuisine"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/restaurantCuisineSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/restaurantSearchKeywordInput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/radiusPicker"
        android:layout_alignStart="@+id/radiusPicker"
        android:text=""
        android:inputType="text" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/restaurantCuisineSpinner"
        android:spinnerMode="dialog"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/restaurantSearchKeywordInput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/restaurantSearchKeywordInput"
        android:layout_alignStart="@+id/restaurantSearchKeywordInput"
        android:entries="@array/cuisine_list"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/keywordLabel"
        android:id="@+id/restaurantSearchKeywordLabel"
        android:layout_alignTop="@+id/restaurantSearchKeywordInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiusPicker"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_alignTop="@+id/radiusPickerLabel"
        android:layout_toRightOf="@+id/radiusPickerLabel"
        android:layout_toEndOf="@+id/radiusPickerLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchRestaurantsButton"
        android:id="@+id/searchRestaurantsButton"
        android:layout_below="@+id/radiusPicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="searchRestaurantsGo" />

</RelativeLayout>
